Trying to change TODO with OTHER to see if it will generate OTHER notes 2